--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
 language: c#
 solution: ASSMBLR.sln
+install:
+  - nuget restore solution-name.sln
+  - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
+script:
+  - xbuild /p:Configuration=Release ASMBLR.sln
+  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe "./Basic runner tests/bin/Debug/Basic_runner_tests.dll"
